syntax = "proto3";

option csharp_namespace = "ApiService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package greet;




// The greeting service definition.
service UserService{

  /* CARGO */
  rpc GetCargo(GetOrDeleteCargoRequest) returns (CargoObject);
  rpc GetListCargo(google.protobuf.Empty) returns (ListCargo);
  rpc CreateCargo(CreateOrUpdateCargoRequest) returns (CargoObject);
  rpc UpdateCargo(CreateOrUpdateCargoRequest) returns (CargoObject);
  rpc DeleteCargo(GetOrDeleteCargoRequest) returns (CargoObject);
  /* CARGO_TYPES */
  rpc GetCargoType(GetOrDeleteCargoTypesRequest) returns (CargoTypesObject);
  rpc GetListCargoTypes (google.protobuf.Empty) returns (ListCargoType);
  rpc CreateCargoType (CreateOrUpdateCargoTypesRequest) returns (CargoTypesObject);
  rpc UpdateCargoType (CreateOrUpdateCargoTypesRequest) returns (CargoTypesObject);
  rpc DeleteCargoType (GetOrDeleteCargoTypesRequest) returns (CargoTypesObject);
  /* DRIVER_LICENCE */
  rpc GetDriverLicence (GetOrDeleteDriverLicenceRequest) returns (DriverLicenceObject);
  rpc GetListDriverLicences (google.protobuf.Empty) returns (ListDriverLicence);
  rpc CreateDriverLicence (CreateOrUpdateDriverLicenceRequest) returns (DriverLicenceObject);
  rpc UpdateDriverLicence (CreateOrUpdateDriverLicenceRequest) returns (DriverLicenceObject);
  rpc DeleteDriverLicence (GetOrDeleteDriverLicenceRequest) returns (DriverLicenceObject);
  /* DRIVERS */
  rpc GetDriver (GetOrDeleteDriversRequest) returns (DriversObject);
  rpc GetListDrivers (google.protobuf.Empty) returns (ListDrivers);
  rpc CreateDriver (CreateOrUpdateDriversRequest) returns (DriversObject);
  rpc UpdateDriver (CreateOrUpdateDriversRequest) returns (DriversObject);
  rpc DeleteDriver (GetOrDeleteDriversRequest) returns (DriversObject);
  /* REQUESTS */
  rpc GetRequest (GetOrDeleteRequestObjRequest) returns (RequestsObject);
  rpc GetListRequests (google.protobuf.Empty) returns (ListRequest);
  rpc CreateRequest (CreateOrUpdateRequestObjRequest) returns (RequestsObject);
  rpc UpdateRequest (CreateOrUpdateRequestObjRequest) returns (RequestsObject);
  rpc DeleteRequest (GetOrDeleteRequestObjRequest) returns (RequestsObject);
  /* REQUISITES */
  rpc GetRequisite (GetOrDeleteRequisitesRequest) returns (RequisitesObject);
  rpc GetListRequisites (google.protobuf.Empty) returns (ListRequisites);
  rpc CreateRequisite (CreateOrUpdateRequisitesRequest) returns (RequisitesObject);
  rpc UpdateRequisite (CreateOrUpdateRequisitesRequest) returns (RequisitesObject);
  rpc DeleteRequisite (GetOrDeleteRequisitesRequest) returns (RequisitesObject);
  /* VEHICLES_TYPES */
  rpc GetVehiclesType (GetOrDeleteVehiclesTypesRequest) returns (VehiclesTypesObject);
  rpc GetListVehiclesTypes (google.protobuf.Empty) returns (ListVehiclesTypes);
  rpc CreateVehiclesType (CreateOrUpdateVehiclesTypesRequest) returns (VehiclesTypesObject);
  rpc UpdateVehiclesType (CreateOrUpdateVehiclesTypesRequest) returns (VehiclesTypesObject);
  rpc DeleteVehiclesType (GetOrDeleteVehiclesTypesRequest) returns (VehiclesTypesObject);
  /* VEHICLES */
  rpc GetVehicle (GetOrDeleteVehiclesRequest) returns (VehiclesObject);
  rpc GetListVehicles (google.protobuf.Empty) returns (ListVehicles);
  rpc CreateVehicle (CreateOrUpdateVehiclesRequest) returns (VehiclesObject);
  rpc UpdateVehicle (CreateOrUpdateVehiclesRequest) returns (VehiclesObject);
  rpc DeleteVehicle (GetOrDeleteVehiclesRequest) returns (VehiclesObject);
  /* ROLES */
  rpc GetRole (GetOrDeleteRoleRequest) returns (RolesObject);
  rpc GetListRoles (google.protobuf.Empty) returns (ListRoles);
  rpc CreateRole (CreateOrUpdateRoleRequest) returns (RolesObject);
  rpc UpdateRole(CreateOrUpdateRoleRequest) returns (RolesObject);
  rpc DeleteRole(GetOrDeleteRoleRequest) returns (RolesObject);
  /* ROUTE_ACTIONS */
  rpc GetRouteAction (GetOrDeleteRouteActionsRequest) returns (RouteActionsObject);
  rpc GetListRouteActions (google.protobuf.Empty) returns (ListRouteActions);
  rpc CreateRouteAction (CreateOrUpdateRouteActionsRequest) returns (RouteActionsObject);
  rpc UpdateRouteAction (CreateOrUpdateRouteActionsRequest) returns (RouteActionsObject);
  rpc DeleteRouteAction (GetOrDeleteRouteActionsRequest) returns (RouteActionsObject);
  /* ROUTE */
  rpc GetRoute (GetOrDeleteRouteObjectRequest) returns (RouteObject);
  rpc GetListRoute (google.protobuf.Empty) returns (ListRouteObjects);
  rpc CreateRoute (CreateOrUpdateRouteObjectRequest) returns (RouteObject);
  rpc UpdateRoute (CreateOrUpdateRouteObjectRequest) returns (RouteObject);
  rpc DeleteRoute (GetOrDeleteRouteObjectRequest) returns (RouteObject);
  /* ROUTE_REQUESTS */
  rpc GetRouteRequest (GetOrDeleteRoutesRequestsObjectRequest) returns (RouteObject);
  rpc GetListRouteRequests (google.protobuf.Empty) returns (ListRouteObjects);
  rpc CreateRouteRequest (CreateOrUpdateRoutesRequestsObjectRequest) returns (RouteObject);
  rpc UpdateRouteRequest (CreateOrUpdateRoutesRequestsObjectRequest) returns (RouteObject);
  rpc DeleteRouteRequest (GetOrDeleteRoutesRequestsObjectRequest) returns (RouteObject);
  /* LOGIN */
  rpc LoginUser(LoginRequest) returns (LoginReply);
}

/* * * * * 
*	CARGO 
*	CRUD
* * * * */

message CargoObject {
	int32 id = 1;
	google.protobuf.Int32Value type = 2;
	google.protobuf.DoubleValue weight = 3;
	google.protobuf.DoubleValue volume = 4;
	string name = 5;
	google.protobuf.DoubleValue price = 6;
	string constraints = 7;
	CargoTypesObject cargoType = 8;
}

message GetOrDeleteCargoRequest{
	int32 id = 1;
}

message ListCargo{
	repeated CargoObject Cargo = 1;
}

message CreateOrUpdateCargoRequest{
	CargoObject Cargo = 1;
}


/* * * * * * * * * * * * * *
*		CARGO_TYPES				
*			CRUD
* * * * * * * * * * * * * */

message CargoTypesObject {
	int32 id = 1;
	string name = 2;
}

message GetOrDeleteCargoTypesRequest{
	int32 id = 1;
}

message ListCargoType {
	repeated CargoTypesObject CargoType = 1;
}

message CreateOrUpdateCargoTypesRequest {
	CargoTypesObject CargoType = 1;
}

/* * * * * * * * * * * * * *
*		DRIVER_LICENCE
*			CRUD
* * * * * * * * * * * * * */

///TODO
message DriverLicenceObject {
	int32 id = 1;
	google.protobuf.Int32Value series = 2;
	google.protobuf.Int32Value number = 3;
	google.protobuf.Timestamp date = 4; // !!!!!!!!!!!
}

message GetOrDeleteDriverLicenceRequest {
	int32 id = 1;
}

message ListDriverLicence {
	repeated DriverLicenceObject DriverLicence = 1;
}

message CreateOrUpdateDriverLicenceRequest {
	DriverLicenceObject DriverLicence = 1;
}


/* * * * * * * * * * * * * *
*		   DRIVERS
*			CRUD
* * * * * * * * * * * * * */

message DriversObject {
	int32 id = 1;
	string name = 2;
	string surname = 3;
	string patronymic = 4;
	bool sanitation = 5;
	DriverLicenceObject licence = 6;
}

message GetOrDeleteDriversRequest {
	int32 id = 1;
}

message ListDrivers {
	repeated DriversObject Drivers = 1;
}

message CreateOrUpdateDriversRequest {
	DriversObject Driver = 1;
}


/* * * * * * * * * * * * * *
*	      REQUESTS
*			CRUD
* * * * * * * * * * * * * */


message RequestsObject {
	int32 id = 1;
	VehiclesObject vehicle = 2;
	google.protobuf.DoubleValue price = 3;
	bool conditions = 4;
	bool documents = 5;
	google.protobuf.Timestamp creation_date = 6;
	bool is_finished = 7;
	CargoObject cargo = 8;
	RequisitesObject customerReq = 9;
	RequisitesObject transporterReq = 10;
	ListRouteObjects routes = 11;
	DriversObject driver = 12;
}

message GetOrDeleteRequestObjRequest {
	int32 id = 1;
}

message ListRequest {
	repeated RequestsObject Requests = 1;
}

message CreateOrUpdateRequestObjRequest {
	RequestsObject Requests = 1;
}

/* * * * * * * * * * * * * *
*	      REQUISITES
*			CRUD
* * * * * * * * * * * * * */


message RequisitesObject{
	int32 id = 1;
	string Name = 2;
	string legal_address = 3;
	string Inn = 4;
	string ceo = 5;
	google.protobuf.Int32Value pts = 6;
	RolesObject role = 7;	
}

message GetOrDeleteRequisitesRequest{
	int32 id = 1;
}

message ListRequisites{
	repeated RequisitesObject Requisites = 1;
}

message CreateOrUpdateRequisitesRequest {
	RequisitesObject Requisite = 1;
} 

/*=*=*=*=*=*=*=*=*=*=*=*=*=*
*	    VEHICLES_TYPES
*		    CRUD
*=*=*=*=*=*=*=*=*=*=*=*=*=*/


message VehiclesTypesObject{
	int32 id = 1;
	string name = 2;
}

message GetOrDeleteVehiclesTypesRequest {
	int32 id = 1;
}

message ListVehiclesTypes{
	repeated VehiclesTypesObject VehiclesTypes = 1;
}

message CreateOrUpdateVehiclesTypesRequest{
	VehiclesTypesObject VehiclesTypes = 1;
}

/* * * * * * * * * * * * * *
*	      VEHICLES
*			CRUD
* * * * * * * * * * * * * */


message VehiclesObject{
	int32 id = 1;
	VehiclesTypesObject type = 2;
	string number = 3;
	RequisitesObject owner = 4;
	string trailer_number = 5;
}

message GetOrDeleteVehiclesRequest {
	int32 id = 1;
}

message ListVehicles{
	repeated VehiclesObject Vehicle = 1;
}

message CreateOrUpdateVehiclesRequest {
	VehiclesObject Vehicle = 1;
}

/* * * * * * * * * * * * * *
*			ROLES
*			CRUD
* * * * * * * * * * * * * */

message RolesObject{
	int32 id = 1;
	string name = 2;
}

message GetOrDeleteRoleRequest{
	int32 id = 1;
}

message ListRoles{
	repeated RolesObject rolesObject = 1;
}

message CreateOrUpdateRoleRequest{
	RolesObject roleObject = 1;
}

/* * * * * * * * * * * * * *
*		ROUTE_ACTIONS
*			CRUD
* * * * * * * * * * * * * */

message RouteActionsObject{
	int32 id = 1;
	string action = 2;
}

message GetOrDeleteRouteActionsRequest{
	int32 id = 1;
}

message ListRouteActions{
	repeated RouteActionsObject routeActionsObject = 1;
}

message CreateOrUpdateRouteActionsRequest{
	RouteActionsObject routeAction = 1;
}

/* * * * * * * * * * * * * *
*			ROUTE
*			CRUD
* * * * * * * * * * * * * */

message RouteObject{
	int32 id = 1;
	string address = 2;
	RouteActionsObject action = 3;
	google.protobuf.Timestamp action_date = 4;	
}

message GetOrDeleteRouteObjectRequest{
	int32 id = 1;
}

message ListRouteObjects{
	repeated RouteObject routeObjects = 1;
}

message CreateOrUpdateRouteObjectRequest{
	RouteObject routeObject = 1;
}

/* * * * * * * * * * * * * *
*		ROUTES_REQUESTS
*			CRUD
* * * * * * * * * * * * * */

message RoutesRequestsObject{
	int32 id_requests = 1;
	int32 id_route = 2;
}

message GetOrDeleteRoutesRequestsObjectRequest{
	int32 id = 1;
}

message ListRoutesRequestsObject{
	repeated RoutesRequestsObject routesRequestsObject = 1;
}

message CreateOrUpdateRoutesRequestsObjectRequest{
	RoutesRequestsObject routesRequestsObject = 1;
}

/* * * * * * * * * * * * * *
*			LOGIN
* * * * * * * * * * * * * */

message LoginObject{
	string login = 1;
	string password = 2;
}

message LoginRequest{
	LoginObject data = 1;
}

message LoginReply{
	string token = 1;
}